--- a/index.html
+++ b/index.html
@@ -1,92 +1,130 @@
+
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="imgs/me.jpeg">
 
-	<head>
-	    <meta charset="utf-8">
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Talab Hussein</title>
+    <title>Talab Hussein</title>
 
-	    <!-- Bootstrap Core CSS -->
-	    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
-	    <!-- Animate CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+    <!-- Custom styles for this template -->
+    <link href="css/styles.css" rel="stylesheet">
+  </head>
 
-	    <!-- Custom CSS -->
-	    <link href="css/style.css" rel="stylesheet">
+  <body>
 
-	    <!-- Custom Fonts -->
-	    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-	</head>
+    <div class="collapse bg-inverse" id="navbarHeader">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 py-4">
+            <h4 class="text-white">About</h4>
+            <p class="text-muted">I’m currently pursuing a bachelor’s degree in Software Engineering with a primary focus on Web and Mobile Development and a secondary focus in cybersecurity at Arizona State University. Currently seeking full-time opportunities for Spring 2018. Thank you very much for your time and consideration!</p>
+          </div>
+          <div class="col-sm-4 py-4">
+            <h4 class="text-white">Contact</h4>
+            <ul class="list-unstyled">
+              <li><h6 class="text-white">Phone: 480-729-0213</h6></li>
+              <li><h6 class="text-white">Email: Talab.Hussein@asu.edu</h6></li> 
+              <li><h6 class="text-white">Location: Arizona, USA</h6></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="navbar navbar-inverse bg-inverse">
+      <div class="container d-flex justify-content-between">
+        <a href="#" class="navbar-brand">Talab Hussein</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
 
-	<body>
+    <section class="jumbotron text-center">
+      <div class="container">
+        <h1 class="jumbotron-heading">Talab Hussein</h1>
+        <p class="lead text-muted">Undergraduate Software Engineering student at Arizona State University. Currently seeking full-time opportunities for Spring 2018.</p>
+        <p>
+          <a href="https://www.linkedin.com/in/talabhussein/" class="btn btn-primary">LinkedIn</a>
+          <a href="resume.pdf" class="btn btn-secondary">Resume</a>
+          <a href="https://www.github.com/talabh" class="btn btn-info">GitHub</a>
+        </p>
+      </div>
+    </section>
 
-	    <!-- Header -->
-	    <header id="top" class="header">
-	        <div class="text-vertical-center">
+    <div class="album text-muted">
+      <div class="container">
+        <h1 class="jumbotron-heading text-center">Portfolio</h1>
+        <div class="row">
+          <div class="card">
+            <img src="imgs/superhero.jpg" alt="Card image cap">
+            <p class="card-text text-center">Meet your new superhero! He needs you more than ever. Only you can keep him safe. Can you take the challenge?<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.SuperHeroJump&hl=en" class="btn btn-danger btn-sm">Download</a>
+          </div>
+          <div class="card">
+            <img src="imgs/abc.jpg" alt="Card image cap">
+            <p class="card-text text-center">ABC VR is an educational application aimed at raising awareness of the importance of STEM Education.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.ABCVR&hl=en" class="btn btn-danger btn-sm">Download</a>
+          </div>
+          <div class="card">
+            <img src="imgs/bump.jpg" alt="Card image cap">
+            <p class="card-text text-center">Bump Ball is an interactive game that pushes the boundaries of your speed and reaction.<br>Tech Stack: Unity 3D (C#), Blender 3D.</p>
+            <a href="https://play.google.com/store/apps/details?id=com.GamifyStudios.BumpBall&hl=en" class="btn btn-danger btn-sm">Download</a>
+          </div>
 
-	        	<!-- Title -->
-	            <img src="img/me.jpeg" />
-	            <h2>Talab Hussein</h2>
-		    <h3>Software Engineer &amp; Entrepreneur</h3><br>
-			
-	            <!-- Buttons -->
+          <div class="card">
+            <img src="imgs/memoranda.png" alt="Card image cap">
+            <p class="card-text text-center">The purpose of this project is to enhance the Memoranda app to support Time Management for programmers.<br>Tech Stack: Java, Eclipse IDE.</p>
+            <a href="https://github.com/cst316/spring16project-Fortran" class="btn btn-primary btn-sm">View</a>
+          </div>
+          <div class="card">
+            <img src="imgs/media.png" alt="Card image cap">
+            <p class="card-text text-center">This is a media management system project a part of a class on database management.<br>Tech Stack: PHP, MySQL, Apache Ant.</p>
+            <a href="https://github.com/TalabH/MediaManagementSystem" class="btn btn-primary btn-sm">View</a>
+          </div>
+          <div class="card">
+            <img src="imgs/car.png" alt="Card image cap">
+            <p class="card-text text-center">Intelligent Interactive Infotainment System for the Software Enginneering Degree Capstone project.<br>Tech Stack: Matlab, Java, Android Studio.</p>
+            <a href="https://github.com/mazaval4/carApp" class="btn btn-primary btn-sm">View</a>
+          </div>
 
-	            <!-- Btn1 Portfolio -->
-	            <a href="https://github.com/TalabH" class="btn btn-dark btn-lg">View Portfolio!</a>
+          <div class="card">
+            <img src="imgs/anna.jpg" alt="Card image cap">
+            <p class="card-text text-center">Do you ever feel stressed, anxious, or down? Anna helps you feel stronger, happier, and more fulfilled.<br>Tech Stack: Javascript, Ionic.</p>
+            <a href="https://devpost.com/software/hackarizona-2017-anna-therapist" class="btn btn-primary btn-sm">View</a>
+          </div>
+          <div class="card">
+            <img src="imgs/42.jpg" alt="Card image cap">
+            <p class="card-text text-center">Our mixed reality game uses the Microsoft HoloLens. The user sees the game as holographic projections.<br>Tech Stack: Microsoft HoloLens, Unity 3D, Blender 3D.</p>
+            <a href="https://devpost.com/software/42-cqaj95" class="btn btn-primary btn-sm">View</a>
+          </div>
+          <div class="card">
+            <img src="imgs/autonotes.jpg" alt="Card image cap">
+            <p class="card-text text-center">This is an automatic note taker, where it transforms the professor's speeach to text during lectures.<br>Tech Stack: Javascript, Microsoft Speech SDK.</p>
+            <a href="https://devpost.com/software/accompanote" class="btn btn-primary btn-sm">View</a>
+          </div>
+        </div>
 
-	            <!-- Btn2 Code/GitHub -->
-	            <a href="https://play.google.com/store/apps/developer?id=Gamify+Studios&hl=en" class="btn btn-dark btn-lg">Gamify Studios</a><br><br>
+      </div>
+    </div>
 
-	            <!-- Social Icons -->
-	            <div class="link animated fadeIn">
-	                <ul class="list-inline social" style="font-size: 40px; background-color: rgba(0,0,0,0.637);">
+    <footer class="text-muted">
+      <div class="container">
+        <p class="float-right">
+          <a href="#">Back to top</a>
+        </p>
+        <p>Copyright © Talab Hussein 2017</p>
+      </div>
+    </footer>
 
-	                    <!-- LinkedIn -->
-			    <li class="animated bounceInUp icon_one"><a href="https://www.linkedin.com/in/talabhussein/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-	
-	                    <!-- GitHub -->
-	                    <li class="animated bounceInUp icon_three"><a href="https://github.com/TalabH" target="_blank"><i class="fa fa-github-square"></i></a></li>
-				
-			    <!-- YouTube -->
-	                    <li class="animated bounceInUp icon_four"><a href="https://www.youtube.com/channel/UC0SJKjN7UJypI-0aRGY3-Ew" target="_blank"><i class="fa fa-youtube"></i></a></li>
-	 
-	                </ul>
-	            </div>
-	        </div>
-	    </header>
-
-	    <!-- jQuery -->
-	    <script src="js/jquery.js"></script>
-
-	    <!-- Bootstrap Core JavaScript -->
-	    <script src="js/bootstrap.min.js"></script>
-
-	    <!-- Menu Script -->
-	    <script>
-	    // Closes the sidebar menu
-	    $("#menu-close").click(function(e) {
-	        e.preventDefault();
-	        $("#sidebar-wrapper").toggleClass("active");
-	    });
-	    // Opens the sidebar menu
-	    $("#menu-toggle").click(function(e) {
-	        e.preventDefault();
-	        $("#sidebar-wrapper").toggleClass("active");
-	    });
-	    </script>
-
-	    <!-- I can see you 0.0 -->
-	    <script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-85375982-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
-	</body>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://v4-alpha.getbootstrap.com/dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
